--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#797979</color>
     <color name="blue">#3598DB</color>
     <color name="colorGrey">#505050</color>
+    <color name="colorBlack2">#383838</color>
 </resources>
